Fixed bug where .table-responsive on iOS (iphone 5) was causing the container to be pushed   to the width of the table, thus blowing out the menus

--- a/test/dummy/app/assets/stylesheets/bootstrap_docs.scss
+++ b/test/dummy/app/assets/stylesheets/bootstrap_docs.scss
@@ -353,6 +353,8 @@ body.theme-container .container {
 }
 
 iframe {
+  display: block;
+  overflow: auto;
   width: 100%;
   height: 100%;
   border: none;
